added navbar banne time counter

--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
     
               <div>
 
-                <div class="flex  gap-5">
+                <div class="flex font-lato font-bold gap-5">
                     <div>
                     <span class="countdown font-mono text-4xl">
                            <span style="--value:15;"></span>
                          </span>
-                         &#160; &#160; <i class="fa-solid fa-ellipsis-vertical"></i>
+                         &#160;  <i class="fa-solid fa-ellipsis-vertical"></i>
                        </div> 
                        <div>
                          <span class="countdown font-mono text-4xl">
                            <span style="--value:10;"></span>
                          </span>
-                         &#160; &#160;  <i class="fa-solid fa-ellipsis-vertical"></i>
+                         &#160;   <i class="fa-solid fa-ellipsis-vertical"></i>
                        </div> 
                        <div>
                          <span class="countdown font-mono text-4xl">
                            <span style="--value:24;"></span>
                          </span>
-                         &#160; &#160; &#160;  <i class="fa-solid fa-ellipsis-vertical"></i>
+                         &#160; &#160;  <i class="fa-solid fa-ellipsis-vertical"></i>
                        </div> 
                        <div>
                          <span class="countdown font-mono text-4xl">
@@ -110,7 +110,7 @@
                        </div>
                      </div>
 
-                 <div class="flex space-x-14 text-xs font-lato justify-evenly">
+                 <div class="flex space-x-10 px-2 text-xs font-lato  justify-evenly">
                     <p> Days</p>
                     <p>Hours</p>
                     <p> Minutes</p>
