added banner 1 bannner 2 footer, header text overlay

--- a/index.html
+++ b/index.html
@@ -155,7 +155,41 @@
     
  </main>
  <!-- REVIEW WITH CLIENTS IMAGES WILL START FROM HERE -->
+ <!-- <section class= "px-3 py-4 mx-28">
+      <div>
+           <div class="flex flex-col-reverse divide-y divide-y-reverse">
+            <div>
+              <img src="images/fruit1.png" alt="">
+            </div>
+           </div>
 
+           <div>
+            <p>dfsgfdgbfdgbvf</p>
+           </div> -->
+
+           <!-- <div>
+            <div class="rating">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            </div>
+
+            <div>
+              <p>Details</p>
+            </div>
+
+           </div> -->
+ 
+      </div>
+ </section>
+ 
+ <section class="px-3 pt-3 pb-14 mx-48">
+  <div class="text-center text-xs font-lato font-bold text-white bg-red-500 py-3 mx-96 rounded">
+    <button class=""> Shop All</button>
+  </div>
+ </section>
 
  <!-- banner 2 start from here -->
  <div class="  rounded-full py-1.5 px-32">
@@ -250,7 +284,7 @@
  <div class="">
   <div class=" hero-content text-center text-neutral-content">
     <div class=" max-w-md">
-      <h1 class="mb-5 text-black text-4xl font-lato font-bold">Meet the team section </h1>
+      <h1 class="mb-5 text-black text-4xl font-lato font-bold">Why Choose Us</h1>
       <p class="mb-5 text-black text-xs font-lato">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>
         Latin literature from 45 BC, making it over 2000 years old.</p>
     </div>
