added nav bar, header, main section, footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div  class="carousel w-full ">
     <!-- image 1 -->
     <div id="slide1" class="carousel-item relative w-full">
-      <div class=" semi-transparent opacity-"> <img src="/images/banner1.png" ></div>
+      <div class=" semi-transparent opacity-"> <img src="https://i.ibb.co/rbNQrYs/banner1.png" ></div>
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
         <a href="#slide2" class="btn btn-circle">❮</a> 
         <div class=" hero-content text-center text-neutral-content">
@@ -82,7 +82,7 @@
     <!-- image 2 -->
     
     <div id="slide2" class="carousel-item relative w-full">
-      <div class=" semi-transparent opacity-"> <img src="/images/banner4.png" ></div>
+      <div class=" semi-transparent opacity-"> <img src="https://i.ibb.co/ydrRqfF/banner4.png" ></div>
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
         <a href="#slide1" class="btn btn-circle">❮</a> 
         <div class=" hero-content text-center text-neutral-content">
