--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <!-- Deal of the day -  -->
 <main>
-      <div class="flex justify-between items-baseline text-left gap-20 px-32 py-16">
+      <div class="flex justify-between items-baseline text-left gap-20 px-32 py-10">
             <div class="start-right  ">
              <div><h1 class=" font-lato py-2 text-3xl font-bold ">Deal of the day</h1></div>
                 <p class="text-xs font-lato">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
@@ -154,37 +154,121 @@
             </div>
     
  </main>
- <!-- REVIEW WITH CLIENTS IMAGES WILL START FROM HERE -->
- <!-- <section class= "px-3 py-4 mx-28">
-      <div>
-           <div class="flex flex-col-reverse divide-y divide-y-reverse">
-            <div>
-              <img src="images/fruit1.png" alt="">
-            </div>
-           </div>
 
-           <div>
-            <p>dfsgfdgbfdgbvf</p>
-           </div> -->
 
-           <!-- <div>
-            <div class="rating">
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            </div>
-
-            <div>
-              <p>Details</p>
-            </div>
-
-           </div> -->
+ <!-- REVIEW WITH CLIENTS IMAGES START FROM HERE -->
  
+ <section>
+
+   <div class= " flex gap-3  px-3 py-4 mx-36 ">
+    <!-- section 1 -->
+    <div class="card  bg-base-100 border shadow-xl">
+      <figure class="px-10 pt-10">
+        <img src="/images/fruit4.png" alt="Shoes" class="rounded-xl pb-6 " />
+      </figure>
+        <div>
+          <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
+          <hr class="w-10/12 mx-auto" >
+        </div>
+    
+      <div class="card-body items-center text-center">
+        <p class="text-xs font-lato">Strawberry</p>
+        <div class="card-actions">
+          <div class="rating">
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          </div>
+        </div>
+        <h2 class=" font-bold font-lato text-sm card-title text-red-500">Details</h2>
       </div>
+    </div>
+<!-- section 2 -->
+<div class="card  bg-base-100 border shadow-xl">
+  <figure class="px-10 pt-10">
+    <img src="/images/fruit3.png" alt="Shoes" class="rounded-xl pb-6  " />
+  </figure>
+    <div>
+      <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
+      <hr class="w-10/12 mx-auto" >
+    </div>
+
+  <div class="card-body items-center text-center">
+    <p class="text-xs font-lato">Mango</p>
+    <div class="card-actions">
+      <div class="rating">
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+      </div>
+    </div>
+    <h2 class=" font-bold font-lato text-sm card-title text-red-500">Details</h2>
+  </div>
+</div>    
+<!-- section 3 -->  
+<div class="card  bg-base-100 border shadow-xl">
+  <figure class="px-10 pt-10">
+    <img src="/images/fruit4.png" alt="Shoes" class="rounded-xl pb-6  " />
+  </figure>
+    <div>
+      <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
+      <hr class="w-10/12 mx-auto" >
+    </div>
+
+  <div class="card-body items-center text-center">
+    <p class="text-xs font-lato">Strawberry</p>
+    <div class="card-actions">
+      <div class="rating">
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+      </div>
+    </div>
+    <h2 class=" font-bold font-lato text-sm card-title text-red-500">Details</h2>
+  </div>
+</div>
+
+<!-- section 4 -->
+<div class="card  bg-base-100 border shadow-xl">
+  <figure class="px-10 pt-10">
+    <img src="/images/fruit5.png" alt="Shoes" class="rounded-xl pb-6" />
+  </figure>
+    <div>
+      <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
+      <hr class="w-10/12 mx-auto" >
+    </div>
+
+  <div class="card-body items-center text-center">
+    <p class="text-xs font-lato">Pomegranate</p>
+    <div class="card-actions">
+      <div class="rating">
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+      </div>
+    </div>
+    <h2 class=" font-bold font-lato text-sm card-title text-red-500">Details</h2>
+  </div>
+</div>
+
+   
+
+
+</div>
+
+
  </section>
+
  
+ <!-- input Button -->
  <section class="px-3 pt-3 pb-14 mx-48">
   <div class="text-center text-xs font-lato font-bold text-white bg-red-500 py-3 mx-96 rounded">
     <button class=""> Shop All</button>
