added images section with reviews

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="navbar-end mx-3 text-left">
-                    <button class=" space-x-4  text-xs font-lato bg-white py-2 px-20 rounded-full">Search Here<i class=" fa-solid fa-magnifying-glass"></i>
+                    <button class=" space-x-4  text-xs font-lato bg-white py-2 px-20 text-start justify-around rounded-full">Search Here &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <i class=" fa-solid fa-magnifying-glass"></i>
                     </button>
                  
                   
@@ -164,7 +164,7 @@
     <!-- section 1 -->
     <div class="card  bg-base-100 border shadow-xl">
       <figure class="px-10 pt-10">
-        <img src="/images/fruit4.png" alt="Shoes" class="rounded-xl pb-6 " />
+        <img src="https://i.ibb.co/FBVd30d/fruit4.png" alt="Shoes" class="rounded-xl pb-6 " />
       </figure>
         <div>
           <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
@@ -188,7 +188,7 @@
 <!-- section 2 -->
 <div class="card  bg-base-100 border shadow-xl">
   <figure class="px-10 pt-10">
-    <img src="/images/fruit3.png" alt="Shoes" class="rounded-xl pb-6  " />
+    <img src="https://i.ibb.co/YX13VWh/fruit3.png" alt="Shoes" class="rounded-xl pb-6  " />
   </figure>
     <div>
       <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
@@ -212,7 +212,7 @@
 <!-- section 3 -->  
 <div class="card  bg-base-100 border shadow-xl">
   <figure class="px-10 pt-10">
-    <img src="/images/fruit4.png" alt="Shoes" class="rounded-xl pb-6  " />
+    <img src="https://i.ibb.co/FBVd30d/fruit4.png" alt="Shoes" class="rounded-xl pb-6  " />
   </figure>
     <div>
       <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
@@ -237,7 +237,7 @@
 <!-- section 4 -->
 <div class="card  bg-base-100 border shadow-xl">
   <figure class="px-10 pt-10">
-    <img src="/images/fruit5.png" alt="Shoes" class="rounded-xl pb-6" />
+    <img src="https://i.ibb.co/Yc8qhK6/fruit5.png" alt="Shoes" class="rounded-xl pb-6" />
   </figure>
     <div>
       <P class="text-center pb-4 text-xs font-lato font-bold">12.99$ - 1885$</P>
@@ -421,7 +421,7 @@
                   </div>
                     <!-- image section -->
                   <div>
-                    <img src="/images/whychoose1.png" class="w-96" alt="">
+                    <img src="https://i.ibb.co/zPnwwQ0/whychoose1.png" class="w-96" alt="">
                   </div>
 
               <!-- Dedicated Team - 4-->
