added shaddow and rounded lg on images section

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 </section>
   
 <!-- features fruits  -->
-<section class=" mx-28">
-        <div class=" border px-3 py-6 mx-16">
+<section class="drop-shadow-lg -mt-24 mx-28">
+        <div class=" rounded-md bg-white px-3 py-6 mx-16">
             <Div class="flex items-center w-20 gap-20 mx-20">
             <img src="https://i.ibb.co/0ygpfjg/fruit1.png" alt="">
             <img src="https://i.ibb.co/Yc8qhK6/fruit5.png" alt="">
